// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Snapshots tests should match callback methods 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <textarea
                class="textarea"
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            />
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="input"
          >
            <textarea
              class="textarea"
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          />
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Textarea Snapshots tests should match disabled state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl disabled"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <label
              class="label"
            >
              <span
                class="labelInner"
              >
                Label
              </span>
            </label>
            <div
              class="input"
            >
              <textarea
                aria-label="Label"
                class="textarea"
                disabled=""
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            >
              <span>
                Label
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl disabled"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
          >
            <span
              class="labelInner"
            >
              Label
            </span>
          </label>
          <div
            class="input"
          >
            <textarea
              aria-label="Label"
              class="textarea"
              disabled=""
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          >
            <span>
              Label
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Textarea Snapshots tests should match error state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl hasError"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <label
              class="label"
            >
              <span
                class="labelInner"
              >
                Label
              </span>
            </label>
            <div
              class="input"
            >
              <textarea
                aria-label="Label"
                class="textarea"
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            >
              <span>
                Label
              </span>
            </legend>
          </fieldset>
        </div>
        <span
          class="sub error"
          role="alert"
        >
          This is the placeholder for error note
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl hasError"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
          >
            <span
              class="labelInner"
            >
              Label
            </span>
          </label>
          <div
            class="input"
          >
            <textarea
              aria-label="Label"
              class="textarea"
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          >
            <span>
              Label
            </span>
          </legend>
        </fieldset>
      </div>
      <span
        class="sub error"
        role="alert"
      >
        This is the placeholder for error note
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Textarea Snapshots tests should match fullWidth 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl fullWidth"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <label
              class="label"
            >
              <span
                class="labelInner"
              >
                Label
              </span>
            </label>
            <div
              class="input"
            >
              <textarea
                aria-label="Label"
                class="textarea"
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            >
              <span>
                Label
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl fullWidth"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
          >
            <span
              class="labelInner"
            >
              Label
            </span>
          </label>
          <div
            class="input"
          >
            <textarea
              aria-label="Label"
              class="textarea"
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          >
            <span>
              Label
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Textarea Snapshots tests should match hint text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <label
              class="label"
            >
              <span
                class="labelInner"
              >
                Label
              </span>
            </label>
            <div
              class="input"
            >
              <textarea
                aria-label="Label"
                class="textarea"
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            >
              <span>
                Label
              </span>
            </legend>
          </fieldset>
        </div>
        <span
          class="sub hint"
        >
          This is the placeholder for error note
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
          >
            <span
              class="labelInner"
            >
              Label
            </span>
          </label>
          <div
            class="input"
          >
            <textarea
              aria-label="Label"
              class="textarea"
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          >
            <span>
              Label
            </span>
          </legend>
        </fieldset>
      </div>
      <span
        class="sub hint"
      >
        This is the placeholder for error note
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Textarea Snapshots tests should match label and value props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <label
              class="label"
            >
              <span
                class="labelInner"
              >
                Label
              </span>
            </label>
            <div
              class="input"
            >
              <textarea
                aria-label="Label"
                class="textarea"
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            >
              <span>
                Label
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
          >
            <span
              class="labelInner"
            >
              Label
            </span>
          </label>
          <div
            class="input"
          >
            <textarea
              aria-label="Label"
              class="textarea"
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          >
            <span>
              Label
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Textarea Snapshots tests should match max length 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component formControl"
      >
        <div
          class="inner filled"
        >
          <div
            class="inputWrapper"
          >
            <label
              class="label"
            >
              <span
                class="labelInner"
              >
                Label
              </span>
            </label>
            <div
              class="input"
            >
              <textarea
                aria-label="Label"
                class="textarea"
                maxlength="20"
              >
                value
              </textarea>
            </div>
          </div>
          <fieldset
            aria-hidden="true"
            class="fieldset"
          >
            <legend
              class="legend"
            >
              <span>
                Label
              </span>
            </legend>
          </fieldset>
        </div>
        <div
          class="counter"
        >
          <div
            class="countLength"
          >
            5
          </div>
          /
          20
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component formControl"
    >
      <div
        class="inner filled"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
          >
            <span
              class="labelInner"
            >
              Label
            </span>
          </label>
          <div
            class="input"
          >
            <textarea
              aria-label="Label"
              class="textarea"
              maxlength="20"
            >
              value
            </textarea>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="fieldset"
        >
          <legend
            class="legend"
          >
            <span>
              Label
            </span>
          </legend>
        </fieldset>
      </div>
      <div
        class="counter"
      >
        <div
          class="countLength"
        >
          5
        </div>
        /
        20
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
